--- a/src/main/resources/com/example/gestiondepedidoshibernate/login-view.fxml
+++ b/src/main/resources/com/example/gestiondepedidoshibernate/login-view.fxml
@@ -5,48 +5,83 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="237.0" prefWidth="289.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.LoginController">
+<BorderPane prefHeight="667.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.LoginController">
   <center>
-    <VBox alignment="CENTER" maxHeight="300.0" maxWidth="300.0" prefHeight="385.0" prefWidth="427.0" spacing="20.0" style="-fx-border-style: solid; -fx-border-radius: 15px;">
-      <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-      </padding>
-      <Label text="Gestor de Videojuegos">
-        <font>
-          <Font name="System Bold" size="18.0" />
-        </font>
-      </Label>
-      <GridPane hgap="20.0" vgap="20.0">
-        <columnConstraints>
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+    <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="376.0" prefWidth="400.0" spacing="20.0" style="-fx-border-color: black; -fx-border-width: 3px;" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
         <children>
-          <Button fx:id="btnLogin" defaultButton="true" onAction="#login" text="Acceder" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-          <Label text="Usuario" />
-          <Label text="Contraseña" GridPane.rowIndex="1" />
-          <TextField fx:id="txtUser" GridPane.columnIndex="1" />
-          <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancelar" GridPane.rowIndex="2" />
-        </children>
-      </GridPane>
+          <ImageView fitHeight="165.0" fitWidth="201.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+              <Image url="@img/profile.png" />
+            </image>
+            <VBox.margin>
+              <Insets right="10.0" />
+            </VBox.margin>
+          </ImageView>
 
-      <Label fx:id="info" />
-      <opaqueInsets>
-        <Insets />
-      </opaqueInsets>
+          <Label text="Iniciar Sesión" textAlignment="CENTER">
+            <font>
+              <Font name="System Bold" size="50.0" />
+            </font>
+          </Label>
+        </children>
+      </VBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+        <children>
+          <Label text="Correo">
+            <font>
+              <Font size="16.0" />
+            </font>
+          </Label>
+          <TextField fx:id="txtEmail" text="juan@example.com">
+            <font>
+              <Font size="16.0" />
+            </font>
+          </TextField>
+        </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+        <children>
+          <Label text="Contraseña">
+            <font>
+              <Font size="16.0" />
+            </font>
+          </Label>
+          <PasswordField fx:id="txtPassword" text="1234">
+            <font>
+              <Font size="16.0" />
+            </font>
+          </PasswordField>
+        </children>
+      </HBox>
+      <Button fx:id="btnAcceder" onAction="#login" prefHeight="36.0" prefWidth="136.0" text="Acceder">
+        <font>
+          <Font size="25.0" />
+        </font>
+        <VBox.margin>
+          <Insets bottom="15.0" />
+        </VBox.margin>
+      </Button>
+      <BorderPane.margin>
+        <Insets bottom="100.0" left="200.0" right="200.0" top="100.0" />
+      </BorderPane.margin>
     </VBox>
   </center>
+  <bottom>
+    <Label fx:id="info" text="Label" BorderPane.alignment="CENTER_LEFT">
+      <BorderPane.margin>
+        <Insets bottom="10.0" left="15.0" right="10.0" />
+      </BorderPane.margin>
+      <font>
+        <Font name="System Bold" size="11.0" />
+      </font>
+    </Label>
+  </bottom>
 </BorderPane>
