--- a/src/main/resources/com/example/gestiondepedidoshibernate/login-view.fxml
+++ b/src/main/resources/com/example/gestiondepedidoshibernate/login-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="667.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.LoginController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.LoginController">
   <center>
     <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="376.0" prefWidth="400.0" spacing="20.0" style="-fx-border-color: black; -fx-border-width: 3px;" BorderPane.alignment="CENTER">
       <VBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -77,10 +77,10 @@
   <bottom>
     <Label fx:id="info" text="Label" BorderPane.alignment="CENTER_LEFT">
       <BorderPane.margin>
-        <Insets bottom="10.0" left="15.0" right="10.0" />
+        <Insets bottom="10.0" left="15.0" />
       </BorderPane.margin>
       <font>
-        <Font name="System Bold" size="11.0" />
+        <Font size="11.0" />
       </font>
     </Label>
   </bottom>
