--- a/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
+++ b/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
@@ -1,51 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="602.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.MainViewController">
+<BorderPane prefHeight="602.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.MainViewController">
     <center>
-        <TableView fx:id="tblPedidos" onMouseClicked="#mostrarPedido" styleClass="table-view" BorderPane.alignment="CENTER">
-            <columns>
-                <TableColumn fx:id="id" maxWidth="212.0" minWidth="-1.0" prefWidth="168.0" style="-fx-alignment: center;" text="ID">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="id" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn fx:id="codigo" maxWidth="222.0" minWidth="-1.0" prefWidth="303.0" style="-fx-alignment: center;" text="Codigo de pedido">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="nombre" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn fx:id="fecha" maxWidth="222.0" minWidth="-1.0" prefWidth="174.0" style="-fx-alignment: center;" text="Fecha">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="precio" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn fx:id="total" maxWidth="212.0" minWidth="-1.0" prefWidth="132.0" style="-fx-alignment: center;" text="Total">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="cantidad_disponible" />
-                    </cellValueFactory>
-                </TableColumn>
-            </columns>
-
-            <BorderPane.margin>
-                <Insets />
-            </BorderPane.margin>
-            <opaqueInsets>
-                <Insets />
-            </opaqueInsets>
-            <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-        </TableView>
+      <VBox spacing="100.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <children>
+            <HBox spacing="50.0">
+               <children>
+                    <TableView fx:id="tblPedidos" onMouseClicked="#mostrarPedido" prefHeight="200.0" prefWidth="436.0" styleClass="table-view">
+                        <columns>
+                            <TableColumn fx:id="codigo" prefWidth="75.0" style="-fx-alignment: center;" text="Codigo de pedido">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="nombre" />
+                                </cellValueFactory>
+                            </TableColumn>
+                            <TableColumn fx:id="fecha" prefWidth="75.0" style="-fx-alignment: center;" text="Fecha">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="precio" />
+                                </cellValueFactory>
+                            </TableColumn>
+                            <TableColumn fx:id="total" prefWidth="75.0" style="-fx-alignment: center;" text="Total">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="cantidad_disponible" />
+                                </cellValueFactory>
+                            </TableColumn>
+                        </columns>
+                        <opaqueInsets>
+                            <Insets />
+                        </opaqueInsets>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                    </TableView>
+                  <GridPane alignment="CENTER" hgap="15.0" prefHeight="200.0" prefWidth="365.0" vgap="5.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="114.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="245.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Codigo de pedido" />
+                        <Label text="Fecha" GridPane.rowIndex="1" />
+                        <Label text="Total" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtFecha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ComboBox fx:id="cbCodPedido" prefHeight="25.0" prefWidth="244.0" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <TableView fx:id="tblProductos" prefHeight="200.0" prefWidth="437.0">
+                    <columns>
+                        <TableColumn prefWidth="75.0" text="Producto" />
+                      <TableColumn prefWidth="75.0" text="Codigo de producto" />
+                      <TableColumn prefWidth="75.0" text="Cantidad" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <GridPane hgap="15.0" prefHeight="200.0" prefWidth="411.0" vgap="10.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="160.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="236.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Nombre del producto" />
+                        <Label text="Cantidad" GridPane.rowIndex="2" />
+                        <Label text="Codigo del producto" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtCantidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ComboBox fx:id="cbNombre" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="cbCodigoProducto" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
     </center>
     <bottom>
         <Label fx:id="info" text="Label" BorderPane.alignment="CENTER_LEFT">
@@ -60,7 +120,7 @@
     <top>
         <BorderPane BorderPane.alignment="CENTER">
             <left>
-                <Label fx:id="nombre" text="Label" BorderPane.alignment="CENTER">
+                <Label fx:id="lblNombre" text="Label" BorderPane.alignment="CENTER">
                     <font>
                         <Font name="System Bold" size="28.0" />
                     </font>
