--- a/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
+++ b/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -23,87 +24,119 @@
             <Insets />
          </BorderPane.margin>
          <children>
-            <HBox spacing="50.0">
-               <children>
-                    <TableView fx:id="tblPedidos" onMouseClicked="#mostrarPedido" prefHeight="200.0" prefWidth="436.0" styleClass="table-view">
-                        <columns>
-                            <TableColumn fx:id="codigo" prefWidth="75.0" style="-fx-alignment: center;" text="Codigo de pedido">
-                                <cellValueFactory>
-                                    <PropertyValueFactory property="nombre" />
-                                </cellValueFactory>
-                            </TableColumn>
-                            <TableColumn fx:id="fecha" prefWidth="75.0" style="-fx-alignment: center;" text="Fecha">
-                                <cellValueFactory>
-                                    <PropertyValueFactory property="precio" />
-                                </cellValueFactory>
-                            </TableColumn>
-                            <TableColumn fx:id="total" prefWidth="75.0" style="-fx-alignment: center;" text="Total">
-                                <cellValueFactory>
-                                    <PropertyValueFactory property="cantidad_disponible" />
-                                </cellValueFactory>
-                            </TableColumn>
-                        </columns>
-                        <opaqueInsets>
-                            <Insets />
-                        </opaqueInsets>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                    </TableView>
-                  <GridPane alignment="CENTER" hgap="15.0" prefHeight="200.0" prefWidth="365.0" vgap="5.0">
-                    <columnConstraints>
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="114.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="245.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+            <BorderPane>
+               <center>
+                  <HBox spacing="50.0">
                      <children>
-                        <Label text="Codigo de pedido" />
-                        <Label text="Fecha" GridPane.rowIndex="1" />
-                        <Label text="Total" GridPane.rowIndex="2" />
-                        <TextField fx:id="txtFecha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="txtTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <ComboBox fx:id="cbCodPedido" prefHeight="25.0" prefWidth="244.0" GridPane.columnIndex="1" />
+                          <TableView fx:id="tblPedidos" onMouseClicked="#mostrarPedido" prefHeight="200.0" prefWidth="436.0" styleClass="table-view">
+                              <columns>
+                                  <TableColumn fx:id="codigo" prefWidth="75.0" style="-fx-alignment: center;" text="Codigo de pedido">
+                                      <cellValueFactory>
+                                          <PropertyValueFactory property="nombre" />
+                                      </cellValueFactory>
+                                  </TableColumn>
+                                  <TableColumn fx:id="fecha" prefWidth="75.0" style="-fx-alignment: center;" text="Fecha">
+                                      <cellValueFactory>
+                                          <PropertyValueFactory property="precio" />
+                                      </cellValueFactory>
+                                  </TableColumn>
+                                  <TableColumn fx:id="total" prefWidth="75.0" style="-fx-alignment: center;" text="Total">
+                                      <cellValueFactory>
+                                          <PropertyValueFactory property="cantidad_disponible" />
+                                      </cellValueFactory>
+                                  </TableColumn>
+                              </columns>
+                              <opaqueInsets>
+                                  <Insets />
+                              </opaqueInsets>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                          </TableView>
+                        <GridPane alignment="CENTER" hgap="15.0" prefHeight="200.0" prefWidth="365.0" vgap="5.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="114.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="245.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Codigo de pedido" />
+                              <Label text="Fecha" GridPane.rowIndex="1" />
+                              <Label text="Total" GridPane.rowIndex="2" />
+                              <TextField fx:id="txtFecha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <ComboBox fx:id="cbCodPedido" prefHeight="25.0" prefWidth="244.0" GridPane.columnIndex="1" />
+                           </children>
+                        </GridPane>
                      </children>
-                  </GridPane>
-               </children>
-            </HBox>
-            <HBox>
-               <children>
-                  <TableView fx:id="tblProductos" prefHeight="200.0" prefWidth="437.0">
-                    <columns>
-                        <TableColumn prefWidth="75.0" text="Producto" />
-                      <TableColumn prefWidth="75.0" text="Codigo de producto" />
-                      <TableColumn prefWidth="75.0" text="Cantidad" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-                  <GridPane hgap="15.0" prefHeight="200.0" prefWidth="411.0" vgap="10.0">
-                    <columnConstraints>
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="160.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="236.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                  </HBox>
+               </center>
+               <bottom>
+                  <FlowPane alignment="CENTER_RIGHT" hgap="50.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Nombre del producto" />
-                        <Label text="Cantidad" GridPane.rowIndex="2" />
-                        <Label text="Codigo del producto" GridPane.rowIndex="1" />
-                        <TextField fx:id="txtCantidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <ComboBox fx:id="cbNombre" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" />
-                        <ComboBox fx:id="cbCodigoProducto" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button fx:id="btnActPedido" mnemonicParsing="false" onAction="#update" text="Actualizar" />
+                        <Button fx:id="btnAñaPedido" mnemonicParsing="false" onAction="#add" text="Añadir" />
+                        <Button fx:id="btnBorrarPedido" mnemonicParsing="false" onAction="#delete" text="Eliminar" />
                      </children>
-                  </GridPane>
-               </children>
-            </HBox>
+                     <BorderPane.margin>
+                        <Insets right="40.0" top="20.0" />
+                     </BorderPane.margin>
+                  </FlowPane>
+               </bottom>
+            </BorderPane>
+            <BorderPane>
+               <center>
+                  <HBox>
+                     <children>
+                        <TableView fx:id="tblProductos" prefHeight="200.0" prefWidth="437.0">
+                          <columns>
+                              <TableColumn prefWidth="75.0" text="Producto" />
+                            <TableColumn prefWidth="75.0" text="Codigo de producto" />
+                            <TableColumn prefWidth="75.0" text="Cantidad" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <GridPane hgap="15.0" prefHeight="200.0" prefWidth="411.0" vgap="10.0">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="160.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="236.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Nombre del producto" />
+                              <Label text="Cantidad" GridPane.rowIndex="2" />
+                              <Label text="Codigo del producto" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtCantidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <ComboBox fx:id="cbNombre" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" />
+                              <ComboBox fx:id="cbCodigoProducto" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                           </children>
+                        </GridPane>
+                     </children>
+                  </HBox>
+               </center>
+               <bottom>
+                  <FlowPane alignment="CENTER_RIGHT" hgap="50.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button fx:id="btnActProducto" mnemonicParsing="false" onAction="#update" text="Actualizar" />
+                        <Button fx:id="btnAñaProducto" mnemonicParsing="false" onAction="#add" text="Añadir" />
+                        <Button fx:id="btnBorrarProducto" mnemonicParsing="false" onAction="#delete" text="Eliminar" />
+                     </children>
+                     <BorderPane.margin>
+                        <Insets right="40.0" top="20.0" />
+                     </BorderPane.margin>
+                  </FlowPane>
+               </bottom>
+            </BorderPane>
          </children>
       </VBox>
     </center>
