--- a/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
+++ b/src/main/resources/com/example/gestiondepedidoshibernate/main-view.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="602.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.MainViewController">
+<BorderPane prefHeight="602.0" prefWidth="909.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestiondepedidoshibernate.controllers.MainViewController">
     <center>
       <VBox spacing="100.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -28,7 +28,7 @@
                <center>
                   <HBox spacing="50.0">
                      <children>
-                          <TableView fx:id="tblPedidos" onMouseClicked="#mostrarPedido" prefHeight="200.0" prefWidth="436.0" styleClass="table-view">
+                          <TableView fx:id="tblPedidos" prefHeight="200.0" prefWidth="436.0" styleClass="table-view">
                               <columns>
                                   <TableColumn fx:id="cCodigo" prefWidth="75.0" style="-fx-alignment: center;" text="Codigo de pedido">
                                       <cellValueFactory>
@@ -66,27 +66,14 @@
                            <children>
                               <Label text="Codigo de pedido" />
                               <Label text="Fecha" GridPane.rowIndex="1" />
-                              <Label text="Total" GridPane.rowIndex="2" />
-                              <TextField fx:id="txtFecha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="txtTotal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="txtFecha" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <ComboBox fx:id="cbCodPedido" prefHeight="25.0" prefWidth="244.0" GridPane.columnIndex="1" />
+                              <Button fx:id="btnDate" mnemonicParsing="false" onAction="#fechaActual" prefHeight="40.0" prefWidth="240.0" text="Fecha Actual" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
                      </children>
                   </HBox>
                </center>
-               <bottom>
-                  <FlowPane alignment="CENTER_RIGHT" hgap="50.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button fx:id="btnActPedido" mnemonicParsing="false" onAction="#update" text="Actualizar" />
-                        <Button fx:id="btnAñaPedido" mnemonicParsing="false" onAction="#add" text="Añadir" />
-                        <Button fx:id="btnBorrarPedido" mnemonicParsing="false" onAction="#delete" text="Eliminar" />
-                     </children>
-                     <BorderPane.margin>
-                        <Insets right="40.0" top="20.0" />
-                     </BorderPane.margin>
-                  </FlowPane>
-               </bottom>
             </BorderPane>
             <BorderPane>
                <center>
@@ -94,9 +81,9 @@
                      <children>
                         <TableView fx:id="tblProductos" prefHeight="200.0" prefWidth="437.0">
                           <columns>
-                              <TableColumn fx:id="cProducto" prefWidth="75.0" text="Producto" />
-                            <TableColumn fx:id="cCodProducto" prefWidth="75.0" text="Codigo de producto" />
-                            <TableColumn fx:id="cCantidad" prefWidth="75.0" text="Cantidad" />
+                              <TableColumn fx:id="cProducto" prefWidth="75.0" style="-fx-alignment: center;" text="Producto" />
+                            <TableColumn fx:id="cCodProducto" prefWidth="75.0" style="-fx-alignment: center;" text="Precio" />
+                            <TableColumn fx:id="cCantidad" prefWidth="75.0" style="-fx-alignment: center;" text="Cantidad" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -115,10 +102,10 @@
                            <children>
                               <Label text="Nombre del producto" />
                               <Label text="Cantidad" GridPane.rowIndex="2" />
-                              <Label text="Codigo del producto" GridPane.rowIndex="1" />
+                              <Label text="Precio" GridPane.rowIndex="1" />
                               <TextField fx:id="txtCantidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <ComboBox fx:id="cbNombre" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" />
-                              <ComboBox fx:id="cbCodigoProducto" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <ComboBox fx:id="cbNombre" editable="true" prefHeight="25.0" prefWidth="243.0" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtPrecio" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
                      </children>
